[package]
name = "streamsha"
version = "1.1.0"
authors = ["yuki-js"]
edition = "2018"
description = "A streamed, resumable SHA (Secure Hashing Algorithm) library"
repository = "https://github.com/my-number/streamsha"
license = "MIT"
keywords = ["hash", "sha", "hashing", "sha256", "sha1"]

[dev-dependencies]
hex-literal = "0.2.1"
hex-slice = "0.1.4"
lazy_static = "1.4.0"

[profile.dev]
overflow-checks = false

[profile.test]
overflow-checks = false
